.provarCaches/00D410000011HE0EAM/objects/rstk__pohvcont__c.object
<CustomObject>
    <description>pohvcont__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pohvcont_div__r.rstk__sydiv_div__c +  rstk__pohvcont_serialno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pohvcont_serialno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcont_comment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcont_currduedate__c</fullName>
        <inlineHelpText>Display Only.  If this container is currently on a routing that is not yet received, this field displays the current date it is due at the destination.</inlineHelpText>
        <label>Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcont_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>High Value Container Masters</relationshipLabel>
        <relationshipName>pohvconts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcont_lastauddate__c</fullName>
        <inlineHelpText>Display Only.  Last date routing changed affecting either the due date, shipper or both.</inlineHelpText>
        <label>Last Status Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcont_poconttype__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>A valid container from the Container Type table.</inlineHelpText>
        <label>Container Type</label>
        <referenceTo>rstk__poconttype__c</referenceTo>
        <relationshipLabel>High Value Container Masters</relationshipLabel>
        <relationshipName>pohvconts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcont_poship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Display Only.  If this container is on a routing that has not yet been received, the shipper handling the container will be displayed here.</inlineHelpText>
        <label>Current Shipper</label>
        <referenceTo>rstk__poship__c</referenceTo>
        <relationshipLabel>High Value Container Masters</relationshipLabel>
        <relationshipName>pohvconts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcont_poshipcont__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Current Shipper Container</label>
        <referenceTo>rstk__poshipcont__c</referenceTo>
        <relationshipLabel>High Value Container Masters</relationshipLabel>
        <relationshipName>pohvconts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcont_serialno__c</fullName>
        <inlineHelpText>Specific serial number for this high value container.</inlineHelpText>
        <label>Container Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcont_status__c</fullName>
        <label>Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>At WMS</fullName>
                </value>
                <value>
                    <fullName>At Consolidation Center</fullName>
                </value>
                <value>
                    <fullName>At Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>High Value Container Master</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_High_Value_Container_Masters</fullName>
        <columns>NAME</columns>
        <columns>rstk__pohvcont_div__c</columns>
        <columns>rstk__pohvcont_poconttype__c</columns>
        <columns>rstk__pohvcont_serialno__c</columns>
        <columns>rstk__pohvcont_poship__c</columns>
        <columns>rstk__pohvcont_poshipcont__c</columns>
        <columns>rstk__pohvcont_status__c</columns>
        <columns>rstk__pohvcont_currduedate__c</columns>
        <columns>rstk__pohvcont_lastauddate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>High Value Container Masters</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>High Value Container Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Division_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( rstk__pohvcont_div__c )</errorConditionFormula>
        <errorMessage>Division is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Serial_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( rstk__pohvcont_serialno__c )</errorConditionFormula>
        <errorMessage>Container Serial Number is required</errorMessage>
    </validationRules>
</CustomObject>